 - gui: added clear_history() to edit_box
 - gui: added clipboard support to edit_box
 - gui: added automatic un-focus of edit_box when clicking outside of the box
 - gui: added frame::get_script
 - gui: added slider::set_orientation(const std::string&)
 - gui: added status_bar::set_orientation(const std::string&)
 - gui: render targets can now have texture filtering other than nearest
 - gui: improved peformance of "update borders" notifications
 - gui: improved peformance of generating new object IDs
 - gui: improved peformance of font outline rendering
 - gui: improved quality and consistency of font rendering in OpenGL back-end
 - gui: fixed rare crash in edit_box
 - gui: fixed crash when calling Lua delete_frame() twice on same frame
 - gui: fixed Lua get_width()/get_height() returning incorrect values
 - gui: fixed crash when currently hovered/focussed frame is deleted
 - gui: fixed virtual gui::scroll_frame not able to be inherited from
 - gui: fixed frame OnSizeChanged not always triggered
 - gui: fixed text coloring not working when applied to first character of a manual new line
 - gui: fixed text coloring not working correctly when immediately reset with |r
 - gui: fixed up/down keys for single-line edit_box just moving the cursor and not using history
 - gui: fixed left/right keys not moving the carret as expected when text is selected in edit_box
 - gui: fixed crash when inherited child's name is already taken
 - gui: fixed incorrect handling of optional parameter in Frame:enable_mouse() lua function
 - gui: fixed Frame:get_script() always returning nil
 - gui: fixed edit_box stealing mouse click events from other frames
 - gui: fixed edit_box carret appearing after set_text() even if the box is not focussed
 - gui: fixed edit_box getting stuck when pressing Backspace to delete all partially-displayed text
 - gui: fixed edit_box integer_only setting not always checking for validity of the current content